--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Karl Lin <linroex@coder.tw>",
   "license": "MIT",
   "dependencies": {
-    "electron": "^1.6.2"
+    "electron": "^1.6.2",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^3.1.0"
   }
 }
