--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron": "^1.6.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "node-notifier": "^5.1.2"
   }
 }
